--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     sdk: flutter
   rosita:
     sdk: flutter
+  rosita_interface:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
