--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   web: 0.1.4-beta
   sky_engine:
     sdk: flutter
-  rosita: ^0.0.2
+  rosita: ^0.0.3
+  universal_html: ^2.2.2
 
 dev_dependencies:
   flutter_test:
