--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   rosita: ^0.0.3
   universal_html: ^2.2.2
 
+dependency_overrides:
+  rosita:
+    path: ../rosita
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
